crates/vvv-tui/src/snapshots/vvv_tui__tests__navigation_candidates.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ──────────────────────────────────────────────────────── 1 query · search ┐
│> Al┌ Choose definition · ↑/↓ choose · enter follow · esc cancel ───────────────────┐   │
└ f i│Filter:   (1 choice)                                                           │───┘
┌ 2 F│struct Beta  one.rs:1:1                                                        │───┐
│> a.│                                                                               │   │
│    │                                                                               │   │
├ 3 M│                                                                               │   │
│> 1 │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
└ [Al└───────────────────────────────────────────────────────────────────────────────┘───┘
 search
