crates/vvv-tui/src/snapshots/vvv_tui__tests__navigation_destination.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ───────────────────────────────────────────────── ● 1  1 file  definition ┐
│> Alpha                                                                                 │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ results ──────────────────────────────────┐┌ b.rs ─────────────────────────────────────┐
│● b.rs:1                 struct Beta       ││    1 │ struct Beta {}                     │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘│                                           │
┌ definition ───────────────────────────────┐│                                           │
│ struct Beta {}                            ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└───────────────────────────────────────────┘└───────────────────────────────────────────┘
 search ⏎ follow  ← results  < > resize  j/k scroll  d/u page  e editor  v view
