crates/vvv-tui/src/snapshots/vvv_tui__tests__navigation_identifiers.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ─────────────────────── 1 query · search · ctrl+g filters · ctrl+o places ┐
│> Al┌ Follow identifier · ↑/↓ choose · enter follow · esc cancel ───────────────────┐   │
└ wor│Filter: Beta  (2 choices)                                                      │───┘
┌ 2 F│Beta  2:12  first: Beta,                                                       │–4 ┐
│> a.│Beta  3:13  second: Beta,                                                      │   │
│    │                                                                               │   │
├ 3 M│                                                                               │   │
│> 1 │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
│    │                                                                               │   │
└ [Al└───────────────────────────────────────────────────────────────────────────────┘───┘
 search                                                                           f1 help
