crates/vvv-tui/src/snapshots/vvv_tui__tests__navigation_stale.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ──────────────────────── 1 query · stale · ctrl+g filters · ctrl+o places ┐
│> Alpha                                                                                 │
└ 1/2 alt+→ forward · workspace · all results ───────────────────────────────────────────┘
┌ 2 Files ───────────────────── 1/1 · 1 hit ┐┌ definition · a.rs:1 ───────────────── 1–4 ┐
│> a.rs                                   1 ││ struct Alpha {                            │
│                                           ││     first: Beta,                          │
├ 3 Matches · j/k ───────────────────── 1/1 ┤│     second: Beta,                         │
│> 1  struct Alpha {    first: Beta,    s…  ││ }                                         │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└ [All 1] Decl 1 Imp 0 Uses 0 ──────────────┘└───────────────────────────────────────────┘
 search  Saved source needs validation or refresh (ctrl+r)  ⏎ follow  / find      f1 help
