crates/vvv-tui/src/snapshots/vvv_tui__tests__picker_no_choices.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ────────────────────────────────────────────────────────── Query · search ┐
│> Language symbol:trait lang:rust kind:trait_item                                       │
│ 2/2 · in: crates/very-long-package/src/语 言 /nested/modules · symbol: trait ·           │
│lang: rust · node: trait_item · category: uses · files: lang mod                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ Files ─────────────── 0/0 of 0 · 0/0 hits ┐┌ source ───────────────────────────────────┐
│ no result files                           ││                                           │
├ Matches ──┌ language ───────────────────────────── 0 choices · loaded hits ┐           │
│ No matches│> zzzz▏                                                         │           │
│           │                                                                │           │
│           │ No choices match                                               │           │
│           └────────────────────────────────────────────────────────────────┘           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└All 0 Decl 0 Imp 0  [Uses 0] ──────────────┘└───────────────────────────────────────────┘
 search ↑/↓ move  ⏎ choose  esc cancel  ctrl+x clear  ctrl+u text  ←/→ caret      f1 help
