crates/vvv-tui/src/snapshots/vvv_tui__tests__places_help_narrow.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render_size(50, 18)"
---
┌ Help · Places ─────────────────────────────────┐
│ Places                                         │
│               ⏎  restore a browsing page or run│
│                  a recent search               │
│             esc  close without changing your   │
│                  place                         │
│       tab s-tab  switch browsing trail / recent│
│                  searches                      │
│      ↓ ctrl+n ↑  select a place                │
│          ctrl+p                                │
│            home  first place                   │
│             end  last place                    │
│            pgdn  next page                     │
│            pgup  previous page                 │
│          ctrl+u  clear place filter            │
│          ctrl+d  forget selected recent search │
└────────────────────────────────────────────────┘
 search j/k scroll  any key close       f1 return
