crates/vvv-tui/src/snapshots/vvv_tui__tests__places_recent_narrow.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render_size(50, 18)"
---
┌ ┌ Places · Trail 1 / Recent 2 ─────── 1 shown ┐┐
│>│Find: Engine▏                                ││
└ │> Engine lang:rust · in: crates/             │┘
┌ │vvv · uses · files: srv                      │┐
│>│                                             ││
│ │                                             ││
│ │                                             ││
│ │                                             ││
│ │                                             ││
├ │                                             ││
│>│                                             ││
│ │                                             ││
│ │                                             ││
│ │                                             ││
│ │                                             ││
│ │                                             ││
└ │                                             │┘
 s└ tab switch · ctrl+d forget · f1 keys ───────┘
