crates/vvv-tui/src/snapshots/vvv_tui__tests__places_trail_narrow.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render_size(50, 12)"
---
┌ ┌ Places · Trail 2 / Recent 2 ─────── 2 shown ┐┐
│>│Find: ▏                                      ││
│ │    Search: Language · src/lang/             ││
│i│mod.rs:64 · in: crates/vvv/src/very/long/    ││
│m│path/with/multiple/components                ││
└─│> ● Search: Language · src/lang/             │┘
 F│mod.rs:64 · in: crates/vvv/src/very/long/    │┐
├ │path/with/multiple/components                ││
│>│                                             ││
│ │                                             ││
└ └─────────────────────────────────────────────┘┘
 search ↑/↓ move  ⏎ open  esc cancel      f1 help
