crates/vvv-tui/src/snapshots/vvv_tui__tests__readable_results.snap
---
source: crates/vvv-tui/src/tests.rs
expression: frame
---
┌ vvv ~/dev/nx ───────────────────────────────────────────────────── 1 query · search · ctrl+g filters · ctrl+o places ┐
│> Engine                                                                                                              │
└ workspace · all results ─────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 2 Files ─────────────────────────────────── 1/2 · 4 hits ┐┌ source · crates/vvv/src/cli/commands/serve.rs:6 ─────────┐
│> crates/vvv/src/cli/commands/serve.rs                  3 ││                                                          │
│  crates/vvv/src/context.rs                             1 ││                                                          │
│                                                          ││                                                          │
├ 3 Matches · j/k ──────────────────────────────────── 1/3 ┤│                                                          │
│>  6  use vvv_engine::{Answer…, Failure, Engine, Reply};  ││                                                          │
│  38  engine: Engine,                                     ││                                                          │
│  63  fn engine() -> Engine {                             ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          │└──────────────────────────────────────────────────────────┘
│                                                          │┌ definition ──────────────────────────────────────────────┐
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└ [All 4] Declarations 0 Import 1 Uses 3 ──────────────────┘└ updating ────────────────────────────────────────────────┘
 search j/k move  ⏎ references  F files  f location  t category  o follow  / query  e editor  ? keys  v view    f1 help
