crates/vvv-tui/src/snapshots/vvv_tui__tests__review_applying.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ Rename trait ────────────────────────────────────────────────── 2/4 selected · 2 files ┐
│ Language → Lang                                                                        │
└ src/lang/mod.rs:64 · applying ─────────────────────────────────────────────────────────┘
┌ ? Unverified ─────────────── 1/1 · 1 file ┐┌ Diff · src/lib.rs:26 ─────────────────────┐
│  src/other.rs                             ││ → imported · an import resolving to the   │
│  ▫ 10 Language::new()                     ││ declaration brings the name in            │
└ 0/1 selected ─────────────────────────────┘│@@ -23,6 +23,6 @@                          │
┌ ✓ Safe ──────────────────── 2/3 · 3 files ┐│ // line 23                                │
│  src/lang/mod.rs                          ││ // line 24                                │
│  ▫ 64 pub trait Language: Send + Sync {   ││ // line 25                                │
│  src/lib.rs                               ││-pub use lang::{Language, LanguageId};     │
│> ▪ 26 pub use lang::{Language, LanguageId…││+pub use lang::{Lang, LanguageId};         │
│  src/other.rs                             ││ // line 27                                │
│  ▪ 13 vvv::Language::default()            ││ // line 28                                │
│                                           ││                                           │
│                                           ││                                           │
│                                           ││                                           │
└ 2/3 selected ─────────────────────────────┘│                                           │
 ✗ Other ───────────────────── 0/0 · 0 files └ applying ─────────────────────────────────┘
 rename … j/k move  space toggle  a all here  ⏎ applying  esc back  e editor      f1 help
